--- a/LOGIC & REASONING/mentor.css
+++ b/LOGIC & REASONING/mentor.css
@@ -1,15 +1,67 @@
 
 .cssCode {
     width:100%;
-    height:45%;
+    height:35%;
     font-family:'liberation mono';
     font-size:12px;
 }
 .cssTranslated {
     width:100%;
-    height:45%;
+    height:16%;
     font-family:'liberation mono';
     font-size:12px;
+}
+.cssTABLE {
+    font-style:italic;
+    /*font-weight:bold;*/
+}
+.cssWindow {
+    font-size:10; 
+    padding-left:30px; 
+    font-family:'liberation serif';
+}
+.cssPOS {
+    font-size:12; 
+}
+.cssSUP {
+    font-size:12; 
+    padding-bottom:0px;
+    padding-top:0px;
+    /*text-align:top;*/
+}
+.cssMATRIX {
+    font-family:'liberation serif';
+}
+.cssUBOUNDS {
+    font-size:12; 
+    padding-bottom:0px;
+    padding-top:0px;
+    text-align:center;
+}
+.cssLBOUNDS {
+    font-size:12;
+    padding-bottom:0px;
+    padding-top:0px;
+    text-align:center;
+}
+.cssWindowTitle {
+    font-size:45;
+}
+.cssFormula {
+    font-size:21;
+    text-align:center;
+}
+.cssFormulaFont {
+    font-family:'liberation serif';
+}
+.cssFormulaTable {
+    width:100%;
+    height:35%;
+    overflow:auto;
+    /*
+    overflow-x:scroll;
+    overflow-y:scroll;
+    */
 }
 .cssGNU {
     font-family:liberation serif;
@@ -27,17 +79,43 @@
     width:100%;
     overflow:scroll;
 }
-.cssWindow {
-    font-size:10; 
-    padding-left:30px; 
+.cssFormulaOperator {
+    font-size:48;
+    padding-top:0px;
+    padding-bottom:10px;
+    float:left;
+}
+.cssLINE {
+    font-size:12; 
+    padding-bottom:0px;
+    padding-top:0px;
+    padding-left:64px;
+}
+.cssGIVEN {
+    font-size:21;
     font-family:'liberation serif';
+    padding-left:21px;
 }
-.cssWindowTitle {
-    font-size:45;
+.cssCYAN {
+    color:cyan; /* 00FFFF */
 }
-.cssMENU_LABEL {
-    color:#f4f4f4;
-    text-decoration:none;
+.cssMAGENTA {
+    color:magenta; /*#FF00FF;*/
+}
+.cssYELLOW {
+    color:yellow; /*#FFFF00;*/
+}
+.cssRED {
+    color:red; /*#FF0000;*/
+}
+.cssGREEN {
+    color:green; /*#00FF00;*/
+}
+.cssBLUE {
+    color:blue; /*#0000FF;*/
+}
+.cssBLACK {
+    color:black; /*#000000;*/
 }
 #cssCOVER {
     position:fixed;
@@ -61,6 +139,7 @@
     border:1.5px solid #4e4e4e;
     border-radius:16px;
     background-color:rgba(0%,0%,0%,1);
+    color:white;
     font-family:liberation serif;
     font-size:14px;
 }
@@ -88,4 +167,17 @@
     height:92%;
     width:100%;
     overflow:scroll;
+}
+.cssMENU_LABEL {
+    color: #2e2e2e;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+}
+.cssMENU_LABEL:hover {
+    text-decoration: underline;
+}
+.cssMENU_LABEL:visited {
+    color: #2e2e2e;
 }
